--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,17 @@ img {
   margin: 0 auto;
 }
 .hidden-header {
-  display: none;
+  /* display: none; */
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .subtitle {
@@ -346,9 +356,9 @@ img {
 .projects-info {
   padding: 32px 16px;
   background: var(--color-title-site);
-  border-left: 1px solid #e7e9fc;
-  border-bottom: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
+  border-left: 1px solid var(--color-accent);
+  border-bottom: 1px solid var(--color-accent);
+  border-right: 1px solid var(--color-accent);
 }
 
 /* Styles for  <h2 class="subtitle"> are defined in the COMPONENTS section. <p> inherits styles from body (except color)*/
